--- a/tripjack-hotel/package.json
+++ b/tripjack-hotel/package.json
@@ -9,9 +9,12 @@
     "@mui/material": "^6.2.1",
     "@mui/x-date-pickers": "^7.23.3",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.7",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
