--- a/tripjack-hotel/package.json
+++ b/tripjack-hotel/package.json
@@ -13,6 +13,7 @@
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "razorpay": "^2.9.5",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^19.0.0",
