--- a/tripjack-hotel/package.json
+++ b/tripjack-hotel/package.json
@@ -8,11 +8,13 @@
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.1",
     "@mui/x-date-pickers": "^7.23.3",
+    "@shadcn/ui": "^0.0.4",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "lucide-react": "^0.475.0",
     "razorpay": "^2.9.5",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.7",
