--- a/tripjack-hotel/.env
+++ b/tripjack-hotel/.env
@@ -4,5 +4,10 @@
 # key_id,key_secret
 # rzp_test_7knSOHZmMk60tN,1xWH0VfXwAcf1zz7saV22JPV
 
-RAZORPAY_ID_KEY=rzp_test_7knSOHZmMk60tN
-RAZORPAY_SECRET_KEY=1xWH0VfXwAcf1zz7saV22JPV
+# RAZORPAY_ID_KEY=rzp_test_7knSOHZmMk60tN
+# RAZORPAY_SECRET_KEY=1xWH0VfXwAcf1zz7saV22JPV
+
+
+RAZORPAY_KEY_ID=rzp_live_COgMwy0zi5Mx1j
+RAZORPAY_KEY_SECRET=uSt6k2RSXsKFP04Ff3Q1BzXK
+REACT_APP_RAZORPAY_KEY_ID=rzp_live_COgMwy0zi5Mx1j
